# Agentics

./: .dockerignore  .env.sample  .env_sample  .gitignore  .pre-commit-config.yaml  .tool-versions  404.html  AGSEARCH_UDF_SUMMARY.md  AGSTREAM_SQL_GUIDE.md  AGSTREAM_SQL_QUICK_START.md  AVRO_MIGRATION_PLAN.md  CONTRIBUTING.md  Dockerfile  FLINK_EXECUTION_MODES.md  FLINK_SQL_QUERY_GUIDE.md  Makefile  README.md  RUNNING_TESTS.md  docker-compose-karapace-flink.yml  docker-compose-karapace.yml  index.html  manage_services.sh  manage_services_full.sh  mkdocs.yml  movies.csv  pyproject.toml  qa_test.jsonl  tasks.py  test_reviews.csv
agentics/: index.html
tools/agstream_manager/: .env.example  .gitignore  BACKEND_AVRO_MIGRATION.md  BUILD_OPTIMIZATION.md  Dockerfile.flink-python  FLINK_SQL_USAGE.md  INSTALL.md  QUICK_START.md  README.md  README_FIRST.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  UDF_COMPLETE_GUIDE.md  docker-compose-karapace-flink.yml  manage_services.sh  manage_services_full.sh  pyproject.toml
tools/agstream_manager/agstream_manager/: common.js
tools/agstream_manager/backend/: agstream_manager_service.py  app.py  atypes.py  function_persistence_service.py  function_store.py  listener_manager.py  persistent_function_store.py  registry_client.py
tools/agstream_manager/docs/: AGSTREAM_MANAGER_GUIDE.md  FLINK_WEB_UI_GUIDE.md
tools/agstream_manager/frontend/: agstream_manager.html  test_listener_creation.html  test_ui_debug.html
tools/agstream_manager/scripts/: README.md  auto_register_udfs.py  clean_and_restart_flink.sh  clean_sql_topics.py  clean_sql_topics.sh  download_flink_avro.sh  fix_agreduce.sh  flink  flink_sql.sh  flink_sql_client.sh  flink_sql_shell.py  force_refresh.sh  full_reset_sql.sh  generate_registry_udfs.py  init_flink_tables.py  install_agentics_in_flink.sh  install_python_in_flink.sh  install_udfs.sh  kafka_query.py  manage_agstream.sh  manage_services_full.sh  open_ui.sh  query_agstream_topic.py  rebuild_flink_image.sh  reregister_schemas_as_avro.py  reset_consumer_offsets.py  reset_consumer_offsets.sh  reset_sql_topics.sh  restart_flink.sh  run_flink_tests.sh  run_tests.sh  set_column_width.sh  set_flink_parallelism.sh  setup_question_answer_schemas.py  sql_shell.sh  test_flink_query.md  test_udf_setup.sh  verify_avro_messages.py
tools/agstream_manager/sql/: CLEAN_SYNTAX_EXAMPLES.sql  CONSOLIDATED_EXAMPLES.sql  ag_sentiment_clean_example.sql  aggenerate_examples.sql  agmap_dynamic_examples.sql  agmap_pr_examples.sql  agmap_table_example.sql  agmap_table_helpers.sql  agmap_udf_examples.sql  agpersist_search_complete_examples.sql  agpersist_search_examples.sql  agreduce_examples.sql  agreduce_registry_examples.sql  agsearch_examples.sql  auto_register_all_udfs.sql  init_ag_operators.sql  init_agmap.sql  list_indexes_example.sql  register_aggenerate.sql  register_agmap_table.sql  register_agmap_udfs.sql  register_agpersist_search.sql  register_agsearch.sql  register_agsearch_with_explode.sql  register_dynamic_registry_udfs.sql  register_explode_search_results.sql  register_registry_udfs.sql  register_udfs.sql
tools/agstream_manager/tests/: FLINK_TESTS.md  README.md  test_agmap_agreduce.py  test_agmap_agreduce_sql.py  test_agmap_simple.py  test_all_udfs.py  test_all_udfs_standalone.py  test_create_listener.py  test_listener_persistence.py  test_listener_ui_fixed.py  test_row_sentiment.py  test_row_sentiment.sql  test_schema_enforcement.py  test_sentiment_standalone.py  test_topic_deletion.py
tools/dockling_kg_extractor/: .env.example  INSTALL.md  README.md  app_simple.py  pdf_to_markdown_simple.py  pyproject.toml  start_server.sh  test_extract.py  test_search_api.ipynb
(+303 files in other folders)
