[project]
name = "agentics-kg"
version = "0.1.0"
description = "Agentics KG - Knowledge Graph extraction tool with web UI"
requires-python = ">=3.11,<3.13"
dependencies = [
    "agentics-py",
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "pandas>=2.3.3",
    "docling>=2.0.0",
    "docling-core>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
